--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -25,7 +26,8 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action ="/urls/:shortURL/delete"><button name="Delete">Delete</button></form></td>
+            <td><a class="btn btn-primary" name="Edit" href="/urls/<%= url %>">Edit</a></td>
+            <td><form method="POST" action ="/urls/<%= url %>/delete"><button class = "btn btn-primary" name="Delete">Delete</button></form></td>
           </tr>
         <% } %>
       </tbody>
