--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,18 +9,23 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <form method="post" action="/login"> 
-        <div> <% if (!username) { %>
-          <input  type="text" name="username" placeholder="Username">
-          <button type="login" class="btn btn-primary">Login</button>
-        </div>
-      </form>
+
+      <div> 
+        <% if (!username) { %>
+          <form method="POST" action="/login"> 
+            <input  type="text" name="username" placeholder="Username" />
+            <button type="submit" class="btn btn-primary">Login</button>
+          </form>
         <% } else { %>
-          <form method="post" action="/logout"><a>Logged in As: <%= username %> <button type="logout" class="btn btn-primary">Logout</button> </a> </form>
+          <form method="POST" action="/logout">
+            <a>Logged in As: <%= username %> 
+              <button type="submit" class="btn btn-primary">
+                Logout
+              </button> 
+            </a> 
+          </form>
         <% } %>
-          
-          
-       
+      </div>
     </div>
   </nav>
 </header> 
