--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,10 +12,12 @@
 
       <div> 
         <% if (!user) { %>
-          <form method="POST" action="/login"> 
+          <!-- <form method="POST" action="/login"> 
             <input  type="text" name="email" placeholder="Email Id" />
             <button type="submit" class="btn btn-primary">Login</button>
-          </form>
+          </form> -->
+          <a href="/register">Register</a>
+          <a href="/login">Login</a>
         <% } else { %>
           <form method="POST" action="/logout">
             <a>Logged in As: <%= user.email %> 
