--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,7 +4,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="display: flex; justify-content: space-between;">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
@@ -20,12 +20,15 @@
             </a> 
           </form>
         <% } else { %>
-              <!-- <form method="POST" action="/login"> 
+            <div >
+            <!-- <form method="POST" action="/login"> 
             <input  type="text" name="email" placeholder="Email Id" />
             <button type="submit" class="btn btn-primary">Login</button>
-          </form> -->
-          <a href="/register">Register</a>
-          <a href="/login">Login</a>
+            </form> -->
+            <a style="margin-right: 16px;" href="/register">Register</a>
+            <a href="/login">Login</a>
+
+            </div>  
 
         <% } %>
       </div>
