Bug fixes and testing of various conditions

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,7 +18,7 @@
     <div class="card-footer text-muted">
       <h4>Edit</h4>
       <form name= "Edit" method="POST" action ="/urls/<%= shortURL %>/"><label>New URL:</label>
-        <input type="url" name = "newURL" required>
+        <input type="url" name = "editedURL" required>
         <button class = "btn btn-primary" name="Submit" type="submit" >Submit</button></form>
     </div>
   </div>
