Minor style change

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -25,8 +25,8 @@
             <input  type="text" name="email" placeholder="Email Id" />
             <button type="submit" class="btn btn-primary">Login</button>
             </form> -->
-            <a style="margin-right: 16px;" href="/register">Register</a>
-            <a href="/login">Login</a>
+            <a style="margin-right: 16px; color: aliceblue" href="/register">Register</a>
+            <a style="color: aliceblue" href="/login">Login</a>
 
             </div>  
 
